# place-v-javni-upravi

./: .gitignore  README.md  fetch.py  fetch.sh  place_gasilcev_2023-02.ipynb  place_zdravnikov.ipynb  playground.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.sh
.devcontainer/: devcontainer.json
data/pju/: datapackage.yaml
data/pju/data/: by_budget_user.csv  by_budget_user_group.csv  by_type.csv  payout_types.csv
pju/: __init__.py  fetch.py  package.py  paths.py
test/: test_fetch.py
test/fixtures/vcr_cassettes/: test_fetch_payout_by_budget_user.yaml  test_fetch_payout_by_budget_user_group.yaml  test_fetch_payouts.yaml
